<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.PetRescueSplashFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/dog"
        android:layout_marginBottom="@dimen/dimen64"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/splash_button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen16"
        android:backgroundTint="@color/pet_rescue_color"
        android:text="@string/pet_rescue_splash_button"
        android:textColor="@color/white"
        app:icon="@drawable/paw"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/splash_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/pet_rescue_splash_subtitle"
        android:layout_marginBottom="@dimen/dimen32"
        android:fontFamily="@font/montserratlight"
        android:textSize="@dimen/dimen16Text"
        app:layout_constraintBottom_toTopOf="@id/splash_button_start"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/pet_rescue_splash_title"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/montserratbolditalic"
        android:textSize="@dimen/dimen32Text"
        app:layout_constraintBottom_toTopOf="@id/splash_subtitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>